tests/node_modules_with_bad_package_format/node_modules_with_bad_package_format.exp
Error -------------------------------------------------------------------------------- node_modules/bar/package.json:1:1

Expected an object literal

   1| ["not an object"]
      ^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------------- node_modules/foo/package.json:1:1

Expected an object literal

   1| ["not an object"]
      ^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:8:9

Cannot resolve module `foo`.

   8| require('foo');
              ^^^^^



Found 3 errors
